# AtomLoader

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
Atom/: CMakeLists.txt
Atom/inc/: Exporter.h  Importer.h  Model.h  Types.h
Atom/src/: Exporter.cpp  Importer.cpp  Model.cpp  main.cpp
Docs/: AtomLoader.drawio
